--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "apollo-boost": "^0.4.9",
+    "arangojs": "^7.7.0",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.3",
