--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-graphql": "^0.12.0",
     "graphql": "^16.3.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.3",
     "mongoose": "^6.2.9",
     "nodemon": "^2.0.15",
     "react": "^18.0.0",
